--- a/OnsiteArtifactRecordSupplementMVC/Views/Artifact/Edit.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Artifact/Edit.cshtml
@@ -1,27 +1,22 @@
-﻿@model OARS.Models.ArtifactCreate
+﻿@model OARS.Models.ArtifactEdit
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>ArtifactCreate</h4>
+    <h4>ArtifactEdit</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.ArtifactID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ArtifactID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ArtifactID, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.HiddenFor(model => model.ArtifactID)
+    @Html.HiddenFor(model => model.ArchaeologistID)
 
     <div class="form-group">
         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -42,7 +37,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ElevationFound, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.ElevationFound, new { htmlAttributes = new { @class = "form-control", @type = "number", @min = -.0000000000000000000000000001 } })
+            @Html.EditorFor(model => model.ElevationFound, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ElevationFound, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -123,7 +118,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
 </div>
