--- a/OnsiteArtifactRecordSupplementMVC/Views/Home/Index.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Home/Index.cshtml
@@ -3,29 +3,32 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>On-Site Artifact Record Supplement</h1>
+    <p class="lead">The OARS System allows archaeologists and excavators to chronicle their artifacts and features as they are discovered. Welcome!</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-3">
+        <h2>Log an Artifact</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Our detailed Artifact Logs will allow you to input and then track all of the artifacts found at a particular site. Click below to get started!
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+    <div class="col-md-3">
+        <h2>Become an Archaeologist</h2>
+        <p>Input your credentials and begin to catalogue your finds here! Click below to register!</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+    <div class="col-md-3">
+        <h2>See Sites</h2>
+        <p>Click below to browse sites and see the artifacts found at each one. </p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-3">
+        <h2>Log a Site</h2>
+        <p>Are you a site director? Do you want to share your site with the public? Click here to post your site!</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
