--- a/OnsiteArtifactRecordSupplementMVC/Views/Shared/_Layout.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="text-white">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
