--- a/OnsiteArtifactRecordSupplementMVC/Views/Home/Index.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Home/Index.cshtml
@@ -4,8 +4,7 @@
 
 <div class="jumbotron HomeText backgroundcolorscheme">
     <h1 class="HomeText IndyFont">On-Site Artifact Record Supplement</h1>
-    <p class="lead HomeText IndyFontSubtitles">The OARS System allows archaeologists and excavators to chronicle their artifacts and features as they are discovered. Welcome!</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead HomeText IndyFontSubtitles">The OARS System allows archaeologists and excavators to chronicle their artifacts and features as they are discovered. Welcome!</p>    
 </div>
 
 <div class="row">
@@ -15,21 +14,28 @@
             Our detailed Artifact Logs will allow you to input and then track all of the artifacts found at a particular site. Click below to get started!
         </p>
         <button type="button" class="btn buttonMenu">@Html.ActionLink("Log An Artifact!", "Index", "Artifact")</button>
-        
+
     </div>
     <div class="col-md-3">
         <h2 class="text-white">Become an Archaeologist</h2>
-        <p class="text-white">Input your credentials and begin to catalogue your finds here! Click below to register!</p>
-        <p><a class="btn btn-default text-white" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p class="text-white">Input your credentials and begin to catalogue your finds here! Click below to get to work!</p>
+        <button type="button" class="btn buttonMenu">
+            @if (User.Identity.IsAuthenticated)
+            {@Html.ActionLink("Check your finds!", "Index", "Artifact")}
+            @if (!User.Identity.IsAuthenticated)
+            {
+                @Html.ActionLink("Register", "Account", "Register")
+            }
+        </button>
     </div>
     <div class="col-md-3">
         <h2 class="text-white">See Sites</h2>
         <p class="text-white">Click below to browse sites and see the artifacts found at each one. </p>
-        <p><a class="btn btn-default text-white" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <button type="button" class="btn buttonMenu">@Html.ActionLink("Explore Sites!", "Index", "Site")</button>
     </div>
     <div class="col-md-3">
         <h2 class="text-white">Log a Site</h2>
         <p class="text-white">Are you a site director? Do you want to share your site with the public? Click here to post your site!</p>
-        <p><a class="btn btn-default text-white" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <button type="button" class="btn buttonMenu">@Html.ActionLink("Register Your Site!", "Create", "Site")</button>
     </div>
 </div>
