--- a/OnsiteArtifactRecordSupplementMVC/Views/Manage/Index.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Manage/Index.cshtml
@@ -3,13 +3,13 @@
     ViewBag.Title = "Manage";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="text-white">@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4 class="text-white">Change your account settings</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal text-white">
         <dt>Password:</dt>
         <dd>
             [
