--- a/OnsiteArtifactRecordSupplementMVC/Views/Manage/SetPassword.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Manage/SetPassword.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="text-white">@ViewBag.Title.</h2>
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
@@ -13,24 +13,24 @@
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4 class="text-white">Create Local Login</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
+    <div class="form-group text-white">
         @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group text-white">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group text-white">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
+            <input type="submit" value="Set password" class="btn btn-default text-white" />
         </div>
     </div>
 }
