--- a/OnsiteArtifactRecordSupplementMVC/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Account/ExternalLoginConfirmation.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group text-white">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default text-white" value="Register" />
         </div>
     </div>
 }
