--- a/OnsiteArtifactRecordSupplementMVC/Views/Account/ForgotPassword.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Account/ForgotPassword.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group text-white">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+            <input type="submit" class="btn btn-default text-white" value="Email Link" />
         </div>
     </div>
 }
