--- a/OnsiteArtifactRecordSupplementMVC/Views/Account/ResetPassword.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Account/ResetPassword.cshtml
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group text-white">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="submit" class="btn btn-default text-white" value="Reset" />
         </div>
     </div>
 }
