--- a/OnsiteArtifactRecordSupplementMVC/Views/Account/VerifyCode.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Account/VerifyCode.cshtml
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group text-white">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default text-white" value="Submit" />
         </div>
     </div>
 }
