--- a/OnsiteArtifactRecordSupplementMVC/Views/Artifact/Delete.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Artifact/Delete.cshtml
@@ -4,13 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="text-white">Are you sure you want to delete this?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ArtifactDetail</h4>
+    <h7 class="text-white">(Be honest, did it turn out to be a rock?)</h7>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal text-white">
         <dt>
             @Html.DisplayNameFor(model => model.ArtifactID)
         </dt>
@@ -136,8 +135,8 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+        <div class="form-actions">
+            <input type="submit" value="Delete" class="btn btn-default text-white" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
