--- a/OnsiteArtifactRecordSupplementMVC/Views/Artifact/Details.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Artifact/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+    <h2 class="text-white">Artifact @Html.DisplayFor(model => model.ArtifactID)</h2>
 
-<div>
-    <h4>ArtifactDetail</h4>
+<div class="text-white">   
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
