--- a/OnsiteArtifactRecordSupplementMVC/Views/Feature/Create.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Feature/Create.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2 class="text-white">Log a Feature</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
-    <h4>FeatureCreate</h4>
+<div class="form-horizontal text-white">
+    <h5>Insert Feature Details Below</h5>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -129,7 +129,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-default text-white" />
         </div>
     </div>
 </div>
