--- a/OnsiteArtifactRecordSupplementMVC/Views/Feature/Delete.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Feature/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+    <h2 class="text-white">Are you sure you want to delete this?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>FeatureDetail</h4>
+<div class="text-white">    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -137,7 +135,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default text-white" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
