--- a/OnsiteArtifactRecordSupplementMVC/Views/Manage/AddPhoneNumber.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Manage/AddPhoneNumber.cshtml
@@ -3,23 +3,23 @@
     ViewBag.Title = "Phone Number";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="text-white">@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("AddPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Add a phone number</h4>
+    <h4 class="text-white">Add a phone number</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
+    <div class="form-group text-white">
         @Html.LabelFor(m => m.Number, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group text-white">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default text-white" value="Submit" />
         </div>
     </div>
 }
