--- a/OnsiteArtifactRecordSupplementMVC/Views/Shared/_Layout.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Shared/_Layout.cshtml
@@ -3,75 +3,86 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <title>@ViewBag.Title - OARS System</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    <div class="carousel container">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" class="active">
-                    @if (User.Identity.IsAuthenticated)
-                    {<div class="carousel-caption d-none d-md-block" style="left:45%">
-                            <h5>@Html.ActionLink("Your Artifacts", "Index", "Artifact", null, new { @class = "buttonWhite" })</h5>
+    <div class="backgroundfilter">
+        <nav class="social">            
+            <ul>
+                <li><a href="https://www.facebook.com/deltaiotagamma/">DIG Home<i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://github.com/masongarard">Github <i class="fa fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/mason-garard-3503575b">Linkedin <i class="fa fa-linkedin"></i></a></li>
+            </ul>
+        </nav>
+        <div class="carousel container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" class="active">
+                        @if (User.Identity.IsAuthenticated)
+                        {<div class="carousel-caption d-none d-md-block" style="left:30%">
+                                <h5>@Html.ActionLink("Your Artifacts", "Index", "Artifact", null, new { @class = "buttonWhite" })</h5>
 
-                        </div>}
-                </li>
-                <li data-target="#carouselExampleCaptions">
-                    @if (User.Identity.IsAuthenticated)
-                    {<div class="carousel-caption d-none d-md-block" style="left:75%">
-                            <h5>@Html.ActionLink("Your Sites", "Index", "Site", null, new { @class = "buttonWhite" })</h5>
-                        </div>}
-                </li>
-                <li data-target="#carouselExampleCaptions">
-                    @if (User.Identity.IsAuthenticated)
-                    {<div class="carousel-caption d-none d-md-block" style="left:95%; color:antiquewhite">
-                            <h5>@Html.ActionLink("Your Features", "Index", "Feature", null, new { @class = "buttonWhite" })</h5>
-                        </div>}
-                </li>
-            </ol>
-            <div class="carousel-inner" style="height:456px; width:auto;">
-                <div class="carousel-item active">
-                    <img src="~/Content/Assets/artifactexample.jpg" class="d-block w-100" alt="...">
+                            </div>}
+                    </li>
+                    <li data-target="#carouselExampleCaptions">
+                        @if (User.Identity.IsAuthenticated)
+                        {<div class="carousel-caption d-none d-md-block" style="left:64%">
+                             <h5>@Html.ActionLink("Your Features", "Index", "Feature", null, new { @class = "buttonWhite" })</h5>
+                            </div>}
+                    </li>
+                    <li data-target="#carouselExampleCaptions">
+                        @if (User.Identity.IsAuthenticated)
+                        {<div class="carousel-caption d-none d-md-block" style="left:90%; color:antiquewhite">
+                             <h5>@Html.ActionLink("Your Sites", "Index", "Site", null, new { @class = "buttonWhite" })</h5>
+                            </div>}
+                    </li>
+                </ol>
+                <div class="carousel-inner" style="height:456px; width:auto;">
+                    <div class="carousel-item active">
+                        <img src="~/Content/Assets/artifactexample.jpg" class="d-block w-100" alt="...">
 
+                    </div>
+                    <div class="carousel-item">
+                        <img src="~/Content/Assets/featureexample.jpg" class="d-block w-100" alt="...">
+
+                    </div>
+                    <div class="carousel-item">
+                        <img src="~/Content/Assets/Kabritaketwo.jpg" class="d-block w-100" alt="...">
+
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="~/Content/Assets/Kabritaketwo.jpg" class="d-block w-100" alt="...">
-
-                </div>
-                <div class="carousel-item">
-                    <img src="~/Content/Assets/featureexample.jpg" class="d-block w-100" alt="...">
-
-                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>        
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-2" role="group" aria-label="First group">
-                <button type="button" class="btn buttonMenu">@Html.ActionLink("OARS", "Index", "Home")</button>
-                <button type="button" class="btn buttonMenu">@Html.ActionLink("Your Artifacts", "Index", "Artifact")</button>
-                <button type="button" class="btn buttonMenu">@Html.ActionLink("Your Features", "Index", "Feature")</button>
-                <button type="button" class="btn buttonMenu">@Html.ActionLink("Your Sites", "Index", "Site")</button>
-            </div>
-        </div>        
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn buttonMenu">@Html.ActionLink("OARS", "Index", "Home")</button>
+                    <button type="button" class="btn buttonMenu">@Html.ActionLink("Add an Artifact", "Create", "Artifact")</button>
+                    <button type="button" class="btn buttonMenu">@Html.ActionLink("Add a Feature", "Create", "Feature")</button>
+                    <button type="button" class="btn buttonMenu">@Html.ActionLink("Register a Site", "Create", "Site")</button>
+                    <button type="button" class="btn buttonMenu">@Html.Partial("_LoginPartial")</button>
+                </div>
+            </div>            
+        </div>
+        <div class="container body-content">
+            @RenderBody()
+            <footer class="text-white">
+                <p>&copy; @DateTime.Now.Year - OARS System</p>
+            </footer>
+        </div>
     </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer class="text-white">
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
