--- a/OnsiteArtifactRecordSupplementMVC/Views/Site/Create.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Site/Create.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2 class="text-white">Log a Site</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>SiteCreate</h4>
+    <div class="form-horizontal text-white">
+        <h4>Insert Site Details Below</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -89,7 +89,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default text-white" />
             </div>
         </div>
     </div>
