--- a/OnsiteArtifactRecordSupplementMVC/Views/Site/Index.cshtml
+++ b/OnsiteArtifactRecordSupplementMVC/Views/Site/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2 class="text-white">Index</h2>
+<h2 class="text-white">Sites</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
